Fix bubble alignment on iPhone

--- a/bubbles.css
+++ b/bubbles.css
@@ -1,9 +1,9 @@
 .bubble_wrap{
     height: 299px;
-    left: 48%;
+    left: 35%;
     position: absolute;
     top: 20px;
-    width: 200px;
+    width: 150px;
 }
 .bubbles{
     background-color: rgba(255, 255, 255, 0.26);
